# wr_mobilerobot_ros

./: .gitlab-ci.yml  README.md
robot_base/: CMakeLists.txt  package.xml
robot_base/include/robot_base/: scout_messenger.hpp
robot_base/launch/: scout_base.launch
robot_base/src/: scout_base_node.cpp  scout_messenger.cpp
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/launch/: scout_minimal.launch
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: scout_v2_description.launch
robot_description/sample/: scout_v2_nav.xacro
robot_description/urdf/: scout_v2.urdf  scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: ActuatorStateMsg.msg  DriverState.msg  LightControlType.msg  LightMode.msg  MotionStateMsg.msg  OdometryMsg.msg  RobotState.msg  SysCtrlState.msg  SysErrorCode.msg  SysOperState.msg  SystemStateMsg.msg
