<?xml version="1.0"?>
<package>
  <name>robot_description</name>
  <version>0.4.2</version>
  <description>Robot URDF description</description>

  <author email="contact@westonrobot.com">TODO</author>

  <maintainer email="contact@westonrobot.com">TODO</maintainer>

  <license>BSD</license>

  <url type="website">TODO</url>
  <url type="bugtracker">TODO</url>
  <url type="repository">TODO</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
